# llama_snowflake

./: .env.vault  .gitignore  README.md  pyproject.toml
llama_snowflake/: __init__.py  base_connection.py  main.py  snowflake.py
